# sdv-mcp-demo

./: README.md  app.py  pyproject.toml  vehicle.py  weather.py
data/: province_ids.json  vehicle_00001.json
docs/: sample_report.md
prompts/zh/: data_analysis.json  system.txt
util/: __init__.py  driver_behavior.py  mqtt_mcp_client.py  weather_util.py
